Integrated AI 4 mood analysis,emotional patterns & sent through Email to user